fix wrapping of items on "content"

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -22,6 +22,8 @@ body {
 
 .content {
   display: flex;
+  flex-flow: row wrap;
+  width: 600px;
 }
 
 .left-links {
